--- a/data/cities/ellisville/ellisville-drugs.yml
+++ b/data/cities/ellisville/ellisville-drugs.yml
@@ -1,7 +1,7 @@
 id: 468112196
 type: way
-latitude: 31.6108
-longitude: -89.20477980000001
+latitude: 31.610816600000003
+longitude: -89.2047912
 postcode: "39437"
 city: Ellisville
 street: "Hill Street"
